--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -75,7 +75,8 @@
     </div>
 
     <!--Pwa-->
-    <script src="~/app.js"></script>
+    @*<script src="~/app.js"></script>*@
+
     <script src="~/js/uikit.min.js"></script>
     <script src="~/js/uikit-icons.js"></script>
 
