--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -71,9 +71,9 @@ backdrop-filter: saturate(80%);
 .categories {
   background-color: #fff;
   border: 1px solid #e5e5e5;
-  -moz-box-shadow: rgba(0, 0, 0, 0.16) 0 8px 12px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0 8px 12px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0 8px 12px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
   -moz-border-radius: 4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
   border-radius: 4px 4px 4px 4px;
@@ -101,13 +101,5 @@ backdrop-filter: saturate(80%);
   -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
   box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px; }
-  .main-slideshow .navigation {
-    padding: 10px 20px;
-    backdrop-filter: blur(4px);
-    background-color: rgba(255, 255, 255, 0.24);
-    -moz-border-radius: 1000px 1000px 1000px 1000px;
-    -webkit-border-radius: 1000px 1000px 1000px 1000px;
-    border-radius: 1000px 1000px 1000px 1000px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px; }
+  .main-slideshow .uk-dotnav {
+    height: 16px; }
