--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -33,6 +33,17 @@
             </li>
         </ul>
     </div>
+
+    <div class="mat mat-border">
+        <partial name="_ExpressProductBlock" />
+    </div>
+
+    <div swap="hello"><partial name="_Ad" /></div>
+
+    <partial name="_Ad" />
+
+    <partial name="_Ad" />
+
 }
 
 <div class="main-slideshow uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="ratio:16:7">
@@ -59,9 +70,16 @@
 
 </div>
 
-<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="sets: true">
 
-    <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-2-at-s uk-child-width-1-3-at-m">
+    <div class="title">
+        <a href="#" class="dot-container">
+            <img src="~/st/v/dot.svg" alt="" class="dot" />
+            <h3>سامسونگ</h3>
+        </a>
+    </div>
+
+    <ul class="uk-slider-items">
         <li>
             <partial name="_ProductBlock" />
         </li>
@@ -76,10 +94,81 @@
         </li>
     </ul>
 
-    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
 
 </div>
+
+<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="sets: true">
+
+    <div class="title">
+        <a href="#" class="dot-container">
+            <img src="~/st/v/dot.svg" alt="" class="dot" />
+            <h3>شیائومی</h3>
+        </a>
+    </div>
+
+    <ul class="uk-slider-items">
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+        <li>
+            <partial name="_ProductBlock" />
+        </li>
+    </ul>
+
+    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+
+</div>
+
+<div class="mat-card uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="sets: true">
+
+    <div class="title gap-b">
+        <a href="#" class="dot-container">
+            <img src="~/st/v/dot.svg" alt="" class="dot" />
+            <h3>وبلاگ ها</h3>
+        </a>
+    </div>
+
+    <ul class="uk-slider-items uk-child-width-1-2 uk-grid">
+        <li>
+            <partial name="_BlogBlock" />
+        </li>
+        <li>
+            <partial name="_BlogBlock" />
+        </li>
+        <li>
+            <partial name="_BlogBlock" />
+        </li>
+        <li>
+            <partial name="_BlogBlock" />
+        </li>
+    </ul>
+
+    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin uk-margin-top"></ul>
+
+</div>
+
+
+<div id="hello"></div>
+
+<div class="space-double"></div>
+<div class="space-double"></div>
+<div class="space-double"></div>
 
 
 @section Scripts{
