--- a/GhasreMobile/Views/Shared/_ProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ProductBlock.cshtml
@@ -1,19 +1,26 @@
-﻿<div class="product">
+﻿@{
+    Random r = new Random();
+}
+
+<div class="product">
     <div class="star-container" uk-tooltip="">
         <div class="Stars" style="--rating: 5;"></div>
     </div>
-    <span class="people">2445</span>
-    <img src="" alt="" width="200" height="200" />
-    <h3>
-        گوشی موبایل I
-    </h3>
-    <a href="">دسته بندی</a>
+    <span class="people">(2445)</span>
+    <a href="#" class="link-text">
+        <img src="@($"/st/r/phones/p{r.Next(1,9)}.jpg")" alt="" width="200" height="200" />
+    </a>
+    <a href="#" class="link-text">
+        <h3 class="name" dir="rtl">
+            گوشی موبایل Iphone X دو سیمکارته
+        </h3>
+    </a>
+    <a href="" class="category link-text">دسته بندی</a>
     <span class="discount">
         <span>4,680,000</span>
-        <span>تومان</span>
     </span>
     <span class="price">
+        <span class="t">تومان</span>
         <span>3,999,000</span>
-        <span>تومان</span>
     </span>
 </div>
