--- a/GhasreMobile/wwwroot/css/_colors.scss
+++ b/GhasreMobile/wwwroot/css/_colors.scss
@@ -29,7 +29,7 @@ $mat-background: #fff;
 @mixin mat() {
     background-color: $mat-background;
     border: 1px solid #e5e5e5;
-    @include shadow-medium;
+    @include shadow-mild;
     @include border-def-radius;
 }
 
@@ -44,9 +44,9 @@ $mat-background: #fff;
     padding: 12px;
 }
 
+$mat-border-color: #e9e9e9;
+
 /*#endregion */
-
-
 /*
 backdrop-filter: blur(2px);
 backdrop-filter: brightness(60%);
@@ -59,7 +59,6 @@ backdrop-filter: opacity(20%);
 backdrop-filter: sepia(90%);
 backdrop-filter: saturate(80%);
 */
-
 //*
 @mixin shadow-mild {
     $shadowColor: rgba(0, 0, 0, 0.12);
