Index and Footer

--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -166,6 +166,82 @@
 
 <div id="hello"></div>
 
+<div class="gallery-grid mat-card">
+    <div class="title">
+        <a href="#" class="dot-container">
+            <img src="~/st/v/dot.svg" alt="" class="dot" />
+            <h3>گالری</h3>
+        </a>
+    </div>
+    <div class="grid" uk-lightbox>
+        <a href="~/st/r/ads/a1.jpg" data-caption="نام"><img src="~/st/r/ads/a1.jpg" alt="" /></a>
+        <a href="~/st/r/phones/p1.jpg" data-caption="نام"><img src="~/st/r/phones/p1.jpg" alt="" /></a>
+        <a href="~/st/r/ads/a3.jpg" data-caption="نام"><img src="~/st/r/ads/a3.jpg" alt="" /></a>
+        <a href="~/st/r/phones/p2.jpg" data-caption="نام"><img src="~/st/r/phones/p2.jpg" alt="" /></a>
+        <a href="~/st/r/ads/a4.jpg" data-caption="نام"><img src="~/st/r/ads/a4.jpg" alt="" /></a>
+        <a href="~/st/r/ads/a6.jpg" data-caption="نام"><img src="~/st/r/ads/a6.jpg" alt="" /></a>
+    </div>
+    <div class="row">
+        <a class="btn btn-secondary uk-margin-auto" href="">بیشتر</a>
+    </div>
+</div>
+
+<form class="mat-card uk-margin-remove-top">
+    <h3>درخواست خدمات درب منزل</h3>
+    <p class="text-3">برای درحواست خدمات تعمیراتی و گارانتی درب منزل این فرم را پر کنید </p>
+    <div class="col">
+        <div class="row uk-child-width-1-2">
+            <div class="fg-col">
+                <label for="TelNo" class="fg-label">شماره تلفن</label>
+                <input id="TelNo" name="TelNo" type="tel" class="entry" value="" />
+                <span class="text-danger"></span>
+            </div>
+            <div class="fg-col uk-margin-left">
+                <label for="Name" class="fg-label">نام و نام خانوادگی</label>
+                <input id="Name" name="Name" type="text" class="entry" value="" />
+                <span class="text-danger"></span>
+            </div>
+        </div>
+        <div class="fg-col">
+            <label for="Address" class="fg-label">آدرس</label>
+            <textarea id="Address" name="Address" class="entry"></textarea>
+            <span class="text-danger"></span>
+        </div>
+    </div>
+    <div class="rowr gap-t">
+        <button class="btn btn-primary">فرستادن درخواست</button>
+    </div>
+</form>
+
+<div class="mat-card uk-padding-remove">
+    <h3 class="mat-pad">
+        پاسخ به سوالات شما
+    </h3>
+    <hr class="uk-margin-remove" />
+    <div class="mat-pad">
+        <ul uk-accordion class="uk-margin-remove-top">
+            <li>
+                <a class="uk-accordion-title" href="#">این یک سوال می باشد</a>
+                <p class="uk-accordion-content uk-margin-top uk-margin-remove-bottom text-3">
+                    این جواب سوال می باشد
+                </p>
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">این هم یک سوال می باشد</a>
+                <p class="uk-accordion-content uk-margin-top uk-margin-remove-bottom text-3">
+                    این جواب سوال می باشد
+                </p>
+            </li>
+            <li>
+                <a class="uk-accordion-title" href="#">این یک سوال می باشد</a>
+                <p class="uk-accordion-content uk-margin-top uk-margin-remove-bottom text-3">
+                    این جواب سوال می باشد
+                </p>
+            </li>
+        </ul>
+    </div>
+</div>
+
 <div class="space-double"></div>
 <div class="space-double"></div>
 <div class="space-double"></div>
