--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -74,6 +74,83 @@
         </aside>
     </div>
 
+
+    <footer>
+        <div class="uk-container col uk-light">
+            <div class="grid">
+                <div class="certificates">
+                    <h4>مجوز ها</h4>
+                    <div class="slideshow mat-border" uk-slideshow="autoplay: true; autoplay-interval: 2500; ratio:1:1">
+                        <ul class="uk-slideshow-items mat-border">
+                            <li>
+                                <img src="https://picsum.photos/1" alt="" uk-cover>
+                            </li>
+                            <li>
+                                <img src="https://picsum.photos/1" alt="" uk-cover>
+                            </li>
+                            <li>
+                                <img src="https://picsum.photos/1" alt="" uk-cover>
+                            </li>
+                        </ul>
+                        <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin-bottom"></ul>
+                    </div>
+
+                </div>
+                <div class="links">
+                    <h4>لینک ها</h4>
+                    <ul>
+                        <li>
+                            <a href="">خانه</a>
+                        </li>
+                        <li>
+                            <a href="">سوالات متداول</a>
+                        </li>
+                        <li>
+                            <a href="">تماس با ما</a>
+                        </li>
+                        <li>
+                            <a href="">مشاهده نمایندگی ها</a>
+                        </li>
+                        <li>
+                            <a href="">پشتیبانی و تیکت</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="intro">
+                    <h4>معرفی سایت</h4>
+                    <p>
+                        می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است.
+                    </p>
+                </div>
+                <div class="contact">
+                    <h4>تماس با ما</h4>
+                    <ul>
+                        <li>
+                            <span>۰۲۱-۴۲۴۰۹۰۰۰</span>
+                        </li>
+                        <li>
+                            <span>تبریز - ولیعصر - سربالایی ولیعصر - خیابان حافظ</span>
+                        </li>
+                        <li>
+                            <span>GhasrMobile@Gmail.Com</span>
+                        </li>
+                    </ul>
+                    <div class="media">
+                        <a href="/"><img src="~/st/v/footer/Instagram.svg" alt="" /></a>
+                        <a href="/"><img src="~/st/v/footer/Telegram.svg" alt="" /></a>
+                        <a href="/"><img src="~/st/v/footer/Linkedin.svg" alt="" /></a>
+                        <a href="/"><img src="~/st/v/footer/Titter.svg" alt="" /></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="uk-margin-medium-top" />
+            <p class="uk-text-center text-4">
+                کلیه حقوق این مطعلق به شرکت قصر موبایل می باشد، طراحی و توسعه توسط
+                <strong><a href="https://arvintavco.com">شرکت ایده پرداز آروین تاو</a></strong>
+            </p>
+        </div>
+    </footer>
+
     <!--Pwa-->
     @*<script src="~/app.js"></script>*@
 
