--- a/GhasreMobile/wwwroot/css/Controls.scss
+++ b/GhasreMobile/wwwroot/css/Controls.scss
@@ -646,6 +646,19 @@ $background-highlight: #eee;
     width: 20px;
 }
 
+.title {
+    padding: 12px;
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .dot {
+        width: 16px;
+        height: 16px;
+    }
+}
+
 .product {
     padding: 20px 0;
     margin: 0 4px;
@@ -977,6 +990,133 @@ $background-highlight: #eee;
         label {
             color: $Text-4;
             margin-right: auto;
+        }
+    }
+}
+
+footer {
+    background-color: #222332;
+    padding: 30px 0;
+    background-image: url('../st/v/footer/City.svg');
+    background-position: bottom;
+    background-repeat: no-repeat;
+
+    .uk-container {
+
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 2fr 1fr;
+            grid-gap: 8px;
+            direction: rtl;
+
+            h4 {
+                margin-bottom: 16px;
+            }
+
+            .certificates {
+
+                .slideshow {
+                    max-width: 124px;
+                    max-height: 124px;
+                }
+            }
+
+            ul {
+
+                li {
+                    color: #9294B1;
+                    margin: 8px 0;
+
+                    a, span {
+                        color: #999bb9;
+                    }
+
+                    a:hover, span:hover {
+                        color: lighten(#999bb9,12%);
+                    }
+                }
+            }
+
+            p {
+                color: #9294B1;
+            }
+
+
+            .links {
+            }
+
+            .intro {
+                padding-left: 20px;
+                border-left: 1px #4A4E61 dashed;
+                margin-left: 20px;
+            }
+
+            .contact {
+
+                .media {
+
+                    a {
+
+                        img {
+                        }
+                    }
+                }
+            }
+        }
+
+        hr {
+            color: #4A4E61;
+            border: #4A4E61 dashed 1px;
+        }
+
+        p {
+        }
+    }
+}
+
+@media only screen and (min-width: 532px) and (max-width: 960px) {
+    footer {
+
+        .uk-container {
+
+            .grid {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-gap: 16px;
+
+                .intro {
+                    padding-left: 10px;
+                    border-left: 0;
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+}
+
+
+@media only screen and (max-width: 532px) {
+    footer {
+
+        .uk-container {
+
+            .grid {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr 1fr;
+                grid-gap: 16px;
+
+                .intro {
+                    border-left: 0;
+                }
+
+                .intro {
+                    padding-left: 0;
+                    border-left: 0;
+                    margin-left: 0;
+                }
+            }
         }
     }
 }
