--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -103,3 +103,25 @@ backdrop-filter: saturate(80%);
   box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px; }
   .main-slideshow .uk-dotnav {
     height: 16px; }
+
+.gallery-grid .grid {
+  display: grid;
+  grid-template-rows: auto;
+  grid-gap: 8px;
+  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr)); }
+  .gallery-grid .grid a {
+    display: flex;
+    width: 100%; }
+    .gallery-grid .grid a img {
+      max-height: 200px;
+      -o-object-fit: cover;
+      object-fit: cover;
+      -o-object-position: center;
+      object-position: center;
+      -moz-border-radius: 4px 4px 4px 4px;
+      -webkit-border-radius: 4px 4px 4px 4px;
+      border-radius: 4px 4px 4px 4px;
+      margin: auto; }
+
+.service .body {
+  display: grid; }
